// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages Test Suite pages/404 Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AykKC kOXBlQ"
    onClick={[Function]}
  >
    <div
      className="sc-AykKD cOKOq"
      display="flex"
    >
      <svg
        className="sc-AykKF FGKRX"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AykKE kcueKH"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AykKD gHJXcA"
    display="flex"
  >
    <a
      className="sc-AykKD sc-AykKH fujzaJ"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": "80px",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "80px",
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": "80px",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "80px",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AykKD eERvAt"
        display="flex"
      >
        <h3
          className="sc-AykKE sc-AykKG cndTJj"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AykKE sc-AykKG hGUfFO"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AykKD jlniob"
      display="flex"
    >
      <div
        className="sc-AykKD XkkrL"
        display="flex"
      >
        <a
          className="sc-AykKD sc-AykKH ipFIVy"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AykKF iCQICJ"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AykKD XkkrL"
        display="flex"
      >
        <a
          className="sc-AykKD sc-AykKH ipFIVy"
          display="flex"
          download={true}
          fontWeight="semi-bold"
          target="_blank"
        >
          <svg
            className="sc-AykKF iCQICJ sc-AykKF iCQICJ"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AykKD hQpGkO"
  >
    <h1
      className="sc-AykKE sc-AykKG xRctR"
    >
      Test Page
    </h1>
    <section
      className="sc-AykKD exUlWw"
    >
      <h4
        className="sc-AykKE sc-AykKG eLdLcT"
      >
        Man, I hate when this happens...
      </h4>
      Find your way 
      <a
        className="sc-AykKD sc-AykKH ikgBNt"
        href="/about-me"
        target="_blank"
        variant="underlined"
      >
        Home
      </a>
    </section>
  </main>,
  <footer
    className="sc-AykKD eibRex"
  >
    <a
      className="sc-AykKD sc-AykKH kPrNvl"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AykKD fYdsrD"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
]
`;

exports[`pages Test Suite pages/about-me Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AykKC kOXBlQ"
    onClick={[Function]}
  >
    <div
      className="sc-AykKD cOKOq"
      display="flex"
    >
      <svg
        className="sc-AykKF FGKRX"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AykKE kcueKH"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AykKD gHJXcA"
    display="flex"
  >
    <a
      className="sc-AykKD sc-AykKH fujzaJ"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": "80px",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "80px",
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": "80px",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "80px",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AykKD eERvAt"
        display="flex"
      >
        <h3
          className="sc-AykKE sc-AykKG cndTJj"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AykKE sc-AykKG hGUfFO"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AykKD jlniob"
      display="flex"
    >
      <div
        className="sc-AykKD XkkrL"
        display="flex"
      >
        <a
          className="sc-AykKD sc-AykKH ipFIVy"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AykKF iCQICJ"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AykKD XkkrL"
        display="flex"
      >
        <a
          className="sc-AykKD sc-AykKH ipFIVy"
          display="flex"
          download={true}
          fontWeight="semi-bold"
          target="_blank"
        >
          <svg
            className="sc-AykKF iCQICJ sc-AykKF iCQICJ"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AykKD hQpGkO"
  >
    <h1
      className="sc-AykKE sc-AykKG xRctR"
    >
      Test Page
    </h1>
    <section
      className="sc-AykKD exUlWw"
    >
      <div
        className="sc-AykKD hVAAzk"
        display="flex"
      >
        <a
          className="sc-AykKD sc-AykKH dqQhCA"
          href="mailto:contact@fake.test"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className="sc-AykKD fxyLor"
            width={
              Object {
                "_": 32,
                "mobileM": 38,
              }
            }
          >
            <div
              className=" gatsby-image-wrapper"
              style={
                Object {
                  "overflow": "hidden",
                  "position": "relative",
                }
              }
            >
              <div
                aria-hidden={true}
                style={
                  Object {
                    "paddingBottom": "100%",
                    "width": "100%",
                  }
                }
              />
              <img
                alt=""
                aria-hidden={true}
                src="data:image/png;base64"
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 1,
                    "position": "absolute",
                    "top": 0,
                    "transitionDelay": "500ms",
                    "width": "100%",
                  }
                }
              />
              <picture>
                <source
                  srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                />
                <img
                  alt="FakeContact"
                  loading="lazy"
                  onLoad={[Function]}
                  src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
                  srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "objectFit": "cover",
                      "objectPosition": "center",
                      "opacity": 0,
                      "position": "absolute",
                      "top": 0,
                      "transition": "opacity 500ms",
                      "width": "100%",
                    }
                  }
                />
              </picture>
              <noscript
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"FakeContact\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                  }
                }
              />
            </div>
          </div>
        </a>
      </div>
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "overflow": "hidden",
            "position": "relative",
          }
        }
      >
        <div
          aria-hidden={true}
          style={
            Object {
              "paddingBottom": "100%",
              "width": "100%",
            }
          }
        />
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "borderRadius": 8,
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "100%",
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt="Cover"
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "borderRadius": 8,
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "100%",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"Cover\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <p
        className="sc-AykKE hkGFbo"
        fontSize={20}
      >
        Hi there, I'm Jeremie!
      </p>
      <p
        className="sc-AykKE hkGFbo"
        fontSize={20}
      >
        I'm currently working at 
        <a
          className="sc-AykKD sc-AykKH kUfQqu"
          href="https://fakecompany.test"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <span
            className=" gatsby-image-wrapper"
            style={
              Object {
                "display": "inline-block",
                "height": undefined,
                "overflow": "hidden",
                "position": "relative",
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              aria-hidden={true}
              src="data:image/png;base64"
              style={
                Object {
                  "height": "25px",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transitionDelay": "500ms",
                  "width": "100%",
                }
              }
            />
            <picture>
              <source
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              />
              <img
                alt="FakeCompany"
                loading="lazy"
                onLoad={[Function]}
                src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                style={
                  Object {
                    "height": "25px",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transition": "opacity 500ms",
                    "width": "100%",
                  }
                }
              />
            </picture>
            <noscript
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"FakeCompany\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                }
              }
            />
          </span>
        </a>
         as a Full Stack Engineer.
      </p>
      <p
        className="sc-AykKE hkGFbo"
        fontSize={20}
      >
        I particularly enjoy working with those technologies:
      </p>
      <div
        className="sc-AykKD gXKzaQ sc-AykKI bhTfgs"
        display="flex"
      >
        <a
          className="sc-AykKD sc-AykKH jVtvzP"
          href="https://image.tech"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className=" gatsby-image-wrapper"
            style={
              Object {
                "display": "inline-block",
                "height": undefined,
                "overflow": "hidden",
                "position": "relative",
                "width": undefined,
              }
            }
          >
            <img
              alt=""
              aria-hidden={true}
              src="data:image/png;base64"
              style={
                Object {
                  "height": "52px",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transitionDelay": "500ms",
                  "width": "52px",
                }
              }
            />
            <picture>
              <source
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
              />
              <img
                alt="TechImage"
                loading="lazy"
                onLoad={[Function]}
                src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
                srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
                style={
                  Object {
                    "height": "52px",
                    "left": 0,
                    "objectFit": "cover",
                    "objectPosition": "center",
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transition": "opacity 500ms",
                    "width": "52px",
                  }
                }
              />
            </picture>
            <noscript
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"TechImage\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
                }
              }
            />
          </div>
        </a>
      </div>
      <div
        className="sc-AykKD jtRyeU"
        fontSize={20}
      >
        ▾ By the way, this is where I live, 
        <a
          className="sc-AykKD sc-AykKH dqQhCA"
          onClick={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          San Francisco
        </a>
        ! ▾
      </div>
    </section>
  </main>,
  <footer
    className="sc-AykKD eibRex"
  >
    <a
      className="sc-AykKD sc-AykKH kPrNvl"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AykKD fYdsrD"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
]
`;

exports[`pages Test Suite pages/index Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AykKC kOXBlQ"
    onClick={[Function]}
  >
    <div
      className="sc-AykKD cOKOq"
      display="flex"
    >
      <svg
        className="sc-AykKF FGKRX"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AykKE kcueKH"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AykKD gHJXcA"
    display="flex"
  >
    <a
      className="sc-AykKD sc-AykKH fujzaJ"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": "80px",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "80px",
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": "80px",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "80px",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AykKD eERvAt"
        display="flex"
      >
        <h3
          className="sc-AykKE sc-AykKG cndTJj"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AykKE sc-AykKG hGUfFO"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AykKD jlniob"
      display="flex"
    >
      <div
        className="sc-AykKD XkkrL"
        display="flex"
      >
        <a
          className="sc-AykKD sc-AykKH ipFIVy"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AykKF iCQICJ"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AykKD XkkrL"
        display="flex"
      >
        <a
          className="sc-AykKD sc-AykKH ipFIVy"
          display="flex"
          download={true}
          fontWeight="semi-bold"
          target="_blank"
        >
          <svg
            className="sc-AykKF iCQICJ sc-AykKF iCQICJ"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AykKD hQpGkO"
  >
    <section
      className="sc-AykKD exUlWw"
    />
  </main>,
  <footer
    className="sc-AykKD eibRex"
  >
    <a
      className="sc-AykKD sc-AykKH kPrNvl"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AykKD fYdsrD"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
]
`;

exports[`pages Test Suite pages/posts Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AykKC kOXBlQ"
    onClick={[Function]}
  >
    <div
      className="sc-AykKD cOKOq"
      display="flex"
    >
      <svg
        className="sc-AykKF FGKRX"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AykKE kcueKH"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AykKD gHJXcA"
    display="flex"
  >
    <a
      className="sc-AykKD sc-AykKH fujzaJ"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": "80px",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "80px",
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": "80px",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "80px",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AykKD eERvAt"
        display="flex"
      >
        <h3
          className="sc-AykKE sc-AykKG cndTJj"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AykKE sc-AykKG hGUfFO"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AykKD jlniob"
      display="flex"
    >
      <div
        className="sc-AykKD XkkrL"
        display="flex"
      >
        <a
          className="sc-AykKD sc-AykKH ipFIVy"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AykKF iCQICJ"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AykKD XkkrL"
        display="flex"
      >
        <a
          className="sc-AykKD sc-AykKH ipFIVy"
          display="flex"
          download={true}
          fontWeight="semi-bold"
          target="_blank"
        >
          <svg
            className="sc-AykKF iCQICJ sc-AykKF iCQICJ"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AykKD hQpGkO"
  >
    <h1
      className="sc-AykKE sc-AykKG xRctR"
    >
      Test Page
    </h1>
    <section
      className="sc-AykKD exUlWw"
    >
      <div
        className="sc-AykKD sc-AykKK eHfUVg"
      >
        <ul
          className="sc-AykKD sc-AykKJ grpCGr"
        >
          <label
            className="sc-AykKE eeQYeJ"
            color="secondary"
            display="block"
            fontSize={32}
            fontWeight="semi-bold"
          >
            2019
          </label>
          <li
            className="sc-AykKD ktdGCb"
            display="flex"
            fontSize={24}
            fontWeight="semi-bold"
          >
            <span
              className="sc-AykKD hzgvrq"
              color="primary"
              fontSize={16}
              fontWeight="bold"
            >
              AUG-08
            </span>
            <a
              className="sc-AykKD sc-AykKH dqQhCA"
              href="/posts/test"
              target="_blank"
            >
              Test Post
            </a>
          </li>
        </ul>
      </div>
    </section>
  </main>,
  <footer
    className="sc-AykKD eibRex"
  >
    <a
      className="sc-AykKD sc-AykKH kPrNvl"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AykKD fYdsrD"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
]
`;

exports[`pages Test Suite pages/skills Test Suite matches snapshot 1`] = `
Array [
  <button
    className="sc-AykKC kOXBlQ"
    onClick={[Function]}
  >
    <div
      className="sc-AykKD cOKOq"
      display="flex"
    >
      <svg
        className="sc-AykKF FGKRX"
        height={20}
        viewBox="0 0 512 512"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M507.834 301.608l-54.769-48.312 52.832-50.399a7.46 7.46 0 002.099-7.189 7.505 7.505 0 00-5.211-5.401l-70.316-20.292 25.988-68.056a7.454 7.454 0 00-1.204-7.389 7.55 7.55 0 00-7.038-2.657l-72.274 11.652-5.878-72.561a7.485 7.485 0 00-4.275-6.161 7.569 7.569 0 00-7.504.601l-60.266 41.342-36.609-63.044A7.536 7.536 0 00256.889 0a7.534 7.534 0 00-6.519 3.742L208.347 76.11l-72.69-41.953a7.566 7.566 0 00-7.528-.018 7.477 7.477 0 00-3.78 6.473l-.176 72.795-72.965-6.014a7.55 7.55 0 00-6.807 3.194 7.444 7.444 0 00-.622 7.459l31.242 65.835-68.513 25.681a7.499 7.499 0 00-4.773 5.789 7.456 7.456 0 002.656 7.003l56.619 46.152-50.813 52.41a7.457 7.457 0 00-1.816 7.264 7.508 7.508 0 005.419 5.194l71.055 17.551-23.295 69.011a7.453 7.453 0 001.494 7.336 7.554 7.554 0 007.137 2.382l71.76-14.443 8.721 72.278a7.488 7.488 0 004.513 5.99 7.565 7.565 0 007.475-.891l58.596-43.647 39.055 59.566a7.538 7.538 0 006.662 3.486 7.533 7.533 0 006.368-3.992l34.107-62.405 61.839 38.974a7.566 7.566 0 007.522.31 7.482 7.482 0 004.03-6.322l3.031-72.734 72.674 8.84a7.555 7.555 0 006.928-2.927 7.45 7.45 0 00.914-7.43L435.75 337.31l69.465-23.003a7.502 7.502 0 004.997-5.599 7.46 7.46 0 00-2.378-7.1z"
          fill="#FFA600"
        />
        <ellipse
          cx="254.35"
          cy="254.691"
          fill="#FFDB2D"
          rx="155.069"
          ry="154.949"
        />
        <path
          d="M254.354 99.743c-3.884 0-7.732.147-11.543.428 80.25 5.901 143.525 72.825 143.525 154.521 0 81.695-63.275 148.619-143.525 154.521 3.811.28 7.66.428 11.543.428 85.641 0 155.068-69.373 155.068-154.948 0-85.577-69.427-154.95-155.068-154.95z"
          fill="#FFCA00"
        />
      </svg>
      <span
        className="sc-AykKE kcueKH"
        color="gray"
        fontFamily="'Open Sans', sans-serif"
        fontSize={14}
      >
        light
      </span>
    </div>
  </button>,
  <header
    className="sc-AykKD gHJXcA"
    display="flex"
  >
    <a
      className="sc-AykKD sc-AykKH fujzaJ"
      href="/about-me"
      target="_blank"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": undefined,
            "overflow": "hidden",
            "position": "relative",
            "width": undefined,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64"
          style={
            Object {
              "height": "80px",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "80px",
            }
          }
        />
        <picture>
          <source
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
          />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            src="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png"
            srcSet="/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x"
            style={
              Object {
                "height": "80px",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "80px",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" /><img loading=\\"lazy\\" srcset=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png 1x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/1e576/profile-pic.png 1.5x,
/static/89ee547c5db6cbf9b37a682e8b3f3f57/6cb10/profile-pic.png 2x\\" src=\\"/static/89ee547c5db6cbf9b37a682e8b3f3f57/8b091/profile-pic.png\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
      <div
        className="sc-AykKD eERvAt"
        display="flex"
      >
        <h3
          className="sc-AykKE sc-AykKG cndTJj"
          color="primary"
          fontWeight="bold"
          letterSpacing={-1}
        >
          Jeremie Rodriguez
        </h3>
        <h4
          className="sc-AykKE sc-AykKG hGUfFO"
          fontWeight="semi-bold"
        >
          Full Stack Engineer
        </h4>
      </div>
    </a>
    <nav
      className="sc-AykKD jlniob"
      display="flex"
    >
      <div
        className="sc-AykKD XkkrL"
        display="flex"
      >
        <a
          className="sc-AykKD sc-AykKH ipFIVy"
          href="/"
          target="_blank"
        >
          <svg
            className="sc-AykKF iCQICJ"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          />
          Test
        </a>
      </div>
      <div
        className="sc-AykKD XkkrL"
        display="flex"
      >
        <a
          className="sc-AykKD sc-AykKH ipFIVy"
          display="flex"
          download={true}
          fontWeight="semi-bold"
          target="_blank"
        >
          <svg
            className="sc-AykKF iCQICJ sc-AykKF iCQICJ"
            height={32}
            viewBox="0 0 24 24"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
          Resume
        </a>
      </div>
    </nav>
  </header>,
  <main
    className="sc-AykKD hQpGkO"
  >
    <h1
      className="sc-AykKE sc-AykKG xRctR"
    >
      Test Page
    </h1>
    <section
      className="sc-AykKD exUlWw"
    >
      <div
        className="sc-AykKD kFxcRg"
      >
        <div
          className="sc-AykKD dEXdaM"
          display="flex"
        >
          <span
            className="sc-AykKE egzvmR"
            color="primary"
            fontSize={20}
            fontWeight="bold"
          >
            SKILLS SECTION 0
          </span>
        </div>
        <div
          className="sc-AykKD jsWvaY"
          display="flex"
          height={22}
        >
          <span
            className="sc-AykKE lpnwGX"
            fontSize={16}
            fontWeight="bold"
          >
            Skill 0
          </span>
          <div
            className="sc-AykKD hlBuXb"
            display={
              Object {
                "_": "flex",
                "mobileL": "none",
              }
            }
          >
            <span
              className="sc-AykKE jrrrWG"
              color="primary"
              fontSize={22}
              fontWeight="bold"
            >
              6
              /
              10
            </span>
          </div>
          <div
            className="sc-AykKD dcNBVz"
            display={
              Object {
                "_": "none",
                "mobileL": "flex",
              }
            }
          >
            <span
              className="sc-AykKD jzFOzu"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD eaLxNh"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD eaLxNh"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD eaLxNh"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD bcxfdk"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD bcxfdk"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD bcxfdk"
              height={16}
              width={16}
            />
          </div>
        </div>
        <div
          className="sc-AykKD jsWvaY"
          display="flex"
          height={22}
        >
          <span
            className="sc-AykKE lpnwGX"
            fontSize={16}
            fontWeight="bold"
          >
            Skill 1
          </span>
          <div
            className="sc-AykKD hlBuXb"
            display={
              Object {
                "_": "flex",
                "mobileL": "none",
              }
            }
          >
            <span
              className="sc-AykKE jrrrWG"
              color="primary"
              fontSize={22}
              fontWeight="bold"
            >
              9
              /
              10
            </span>
          </div>
          <div
            className="sc-AykKD dcNBVz"
            display={
              Object {
                "_": "none",
                "mobileL": "flex",
              }
            }
          >
            <span
              className="sc-AykKD jzFOzu"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD eaLxNh"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD eaLxNh"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD eaLxNh"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD eaLxNh"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD eaLxNh"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD bcxfdk"
              height={16}
              width={16}
            />
          </div>
        </div>
      </div>
      <div
        className="sc-AykKD kFxcRg"
      >
        <div
          className="sc-AykKD dEXdaM"
          display="flex"
        >
          <span
            className="sc-AykKE egzvmR"
            color="primary"
            fontSize={20}
            fontWeight="bold"
          >
            SKILLS SECTION 1
          </span>
        </div>
        <div
          className="sc-AykKD jsWvaY"
          display="flex"
          height={22}
        >
          <span
            className="sc-AykKE lpnwGX"
            fontSize={16}
            fontWeight="bold"
          >
            Skill 0
          </span>
          <div
            className="sc-AykKD hlBuXb"
            display={
              Object {
                "_": "flex",
                "mobileL": "none",
              }
            }
          >
            <span
              className="sc-AykKE jrrrWG"
              color="primary"
              fontSize={22}
              fontWeight="bold"
            >
              8
              /
              10
            </span>
          </div>
          <div
            className="sc-AykKD dcNBVz"
            display={
              Object {
                "_": "none",
                "mobileL": "flex",
              }
            }
          >
            <span
              className="sc-AykKD jzFOzu"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD eaLxNh"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD eaLxNh"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD eaLxNh"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD eaLxNh"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD bcxfdk"
              height={16}
              width={16}
            />
            <span
              className="sc-AykKD bcxfdk"
              height={16}
              width={16}
            />
          </div>
        </div>
      </div>
    </section>
  </main>,
  <footer
    className="sc-AykKD eibRex"
  >
    <a
      className="sc-AykKD sc-AykKH kPrNvl"
      href="https://test-repository/tree/3.16.120"
      onClick={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      v3.16.120 - source code
    </a>
    <div
      className="sc-AykKD fYdsrD"
      color="gray"
      fontSize={14}
    >
      licensed under the Test-Licence license
    </div>
  </footer>,
]
`;
